# gtk-editor

./: README.md  meson.build
.cache/clangd/index/: editor_app.c.EE704F53224C818A.idx  editor_app.h.D4088EEC9B060952.idx  editor_win.c.23C1FCACF334DFC7.idx  editor_win.h.E491C82FCE60ED66.idx  gtk_editor.c.024999212664E0DD.idx  gtk_editor.c.DC430DA7AC22F7C5.idx
include/: editor_app.h  editor_win.h
src/: editor_app.c  editor_win.c  gtk_editor.c
